[gd_scene load_steps=3 format=3 uid="uid://shooter001"]

[ext_resource type="Script" path="res://scripts/shooter.gd" id="1_shooter"]
[ext_resource type="Texture2D" uid="uid://launcherbg" path="res://assets/sprites/ui/launcher_bg.png" id="2_launcher"]

[node name="Shooter" type="Node2D"]
script = ExtResource("1_shooter")

[node name="LauncherBg" type="Sprite2D" parent="."]
modulate = Color(0.7, 0.5, 0.8, 0.6)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_launcher")

[node name="AimLine" type="Line2D" parent="."]
width = 3.0
default_color = Color(1, 1, 1, 0.5)

[node name="BubbleContainer" type="Node2D" parent="."]

[node name="CurrentBubblePos" type="Marker2D" parent="."]
position = Vector2(0, -20)

[node name="NextBubblePos" type="Marker2D" parent="."]
position = Vector2(50, 20)
